@@ -1,3 +1,8 @@
+2004-05-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Makefile.in (.SILENT, .PHONY): Add lisp target.
+	(info): Depends on $(CONFIG_FILES).
+
 2004-05-29  Kai Grossjohann  <kai.grossjohann@gmx.net>
 
 	* configure.ac: Use "-pre" suffix on CVS versions.
